--- a/general.css
+++ b/general.css
@@ -1,5 +1,5 @@
 .floatleft
-{   float:left;
+{   display:inline-block;
     width: 32%;
 }
 
@@ -18,7 +18,7 @@
 
 .title
 {   size: 2em;
-    left: 2em;
+    padding: 1em 2em;
 }
 
 html {
@@ -27,4 +27,24 @@ html {
 
 body {
     background-color: lightgray;
+    margin: 3em;
+    padding: 0em;
+}
+
+figcaption {
+    color: white;
+    padding: 1em;
+    background-color: gray;
+    width: 100%;
+    opacity: 50%;
+    font-size: 1.2em;
+    line-height: 1.6em;
+}
+
+figure {
+    margin: 0em;
+}
+
+img {
+    width: 100%;
 }
