--- a/general.css
+++ b/general.css
@@ -1,13 +1,25 @@
 .headers {
     display:inline-block;
     width: 20%;
+    height: 5%;
     overflow: hidden;
+    line-height: 0.2em;
+    padding: 0.8em;
 }
+
 
 .units {
     display:inline-block;
     width: 20%;
+    height: 5%;
     overflow: hidden;
+    line-height: 0.2em;
+    padding: 0.8em;
+}
+
+
+.seperator {
+    border-left: solid 1px gray;
 }
 
 
@@ -27,11 +39,18 @@
 }
 
 h3 {
-    font-size: 1.5em;
+    font-size: 1.2em;
+    line-height: 0.2em;
+    color: gray;
 }
 
 h4 {
     font-size: 1em;
+    line-height: 0.2em;
+}
+
+li {
+    line-height: 0.2em;
 }
 
 .headers {
